--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-poc",
+  "name": "angular-17-routing",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "luna-console": "^1.3.3",
+    "luna-data-grid": "^0.4.3",
+    "luna-dom-viewer": "^1.3.0",
+    "luna-object-viewer": "^0.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
